--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.2'
+        classpath 'com.android.tools.build:gradle:3.5.0'
     }
 }
 
@@ -16,16 +16,7 @@ rootProject.allprojects {
     repositories {
         google()
         jcenter()
-        maven {
-            url "https://api.bitbucket.org/2.0/repositories/clanq/chat-window-android-fork/src/master"
-            credentials {
-                username "DjordjeMancic"
-                password "aaf09073"
-            }
-            authentication{
-                basic(BasicAuthentication)
-            }
-        }
+        maven { url 'https://jitpack.io' }
     }
 }
 
@@ -43,5 +34,5 @@ android {
 }
 
 dependencies {
-    implementation(group: 'de.clanq.chat', name: 'chat-window', version: '1.0.0', ext: 'aar')
+    implementation 'com.github.DjordjeMancic97:chat-window-android:v2.2.3'
 }
